# backend

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tashOBOBOAOA
.github/workflows/: dev.yml
creating_and_editing_a_resume/: Dockerfile  manage.py  pyproject.toml
creating_and_editing_a_resume/api/: serializers.py  urls.py  views.py
creating_and_editing_a_resume/core/: apps.py  enums.py  text.py
creating_and_editing_a_resume/creating_and_editing_a_resume/: asgi.py  settings.py  urls.py  wsgi.py
creating_and_editing_a_resume/resume/: admin.py  apps.py  models.py
creating_and_editing_a_resume/resume/migrations/: 0001_initial.py  0002_alter_resume_video_link.py  0002_initial.py  0003_alter_resume_about_alter_resume_courses_and_more.py  0004_alter_weblink_options.py
creating_and_editing_a_resume/user/: admin.py  models.py  service.py  urls.py  validators.py  views.py
creating_and_editing_a_resume/user/migrations/: 0001_initial.py  0002_alter_education_end_date_and_more.py  0003_alter_courses_diplom_link_alter_education_end_date_and_more.py  0003_alter_education_end_date_and_more.py  0004_alter_education_end_date_and_more.py  0005_rename_diplom_link_courses_diploma_link_and_more.py  0006_alter_education_end_date_and_more.py  0007_alter_education_end_date_and_more.py  0022_alter_resumeuser_phone.py  (+18 more)
infra/: docker-compose.yaml  nginx.conf
tests/: conftest.py  test_about.py  test_courses.py  test_dockerfile.py  test_education.py  test_projects.py  test_user.py  test_work.py
tests/fixtures/: fixture_user.py
(+8 files in other folders)
